fetch data done

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@
 $main-colors: (
   "darkgreen": #103931,
   "lightgray": #f3f3f3,
+  "midgray": #8a8a89,
 );
 
 // Merge custom colors into Bootstrap's theme-colors map
