--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,6 +31,7 @@
   --bs-gray-900: #212529;
   --bs-darkgreen: #103931;
   --bs-lightgray: #f3f3f3;
+  --bs-midgray: #8a8a89;
   --bs-primary: #0d6efd;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
@@ -41,6 +42,7 @@
   --bs-dark: #212529;
   --bs-darkgreen-rgb: 16, 57, 49;
   --bs-lightgray-rgb: 243, 243, 243;
+  --bs-midgray-rgb: 138, 138, 137;
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -3004,6 +3006,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #f3f3f3;
 }
 
+.btn-midgray {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #8a8a89;
+  --bs-btn-border-color: #8a8a89;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #9c9c9b;
+  --bs-btn-hover-border-color: #969695;
+  --bs-btn-focus-shadow-rgb: 117, 117, 116;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #a1a1a1;
+  --bs-btn-active-border-color: #969695;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #8a8a89;
+  --bs-btn-disabled-border-color: #8a8a89;
+}
+
 .btn-primary {
   --bs-btn-color: #fff;
   --bs-btn-bg: #0d6efd;
@@ -3171,6 +3190,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #f3f3f3;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #f3f3f3;
+  --bs-gradient: none;
+}
+
+.btn-outline-midgray {
+  --bs-btn-color: #8a8a89;
+  --bs-btn-border-color: #8a8a89;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #8a8a89;
+  --bs-btn-hover-border-color: #8a8a89;
+  --bs-btn-focus-shadow-rgb: 138, 138, 137;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #8a8a89;
+  --bs-btn-active-border-color: #8a8a89;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #8a8a89;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #8a8a89;
   --bs-gradient: none;
 }
 
@@ -4893,6 +4929,13 @@ textarea.form-control-lg {
   --bs-alert-link-color: var(--bs-lightgray-text-emphasis);
 }
 
+.alert-midgray {
+  --bs-alert-color: var(--bs-midgray-text-emphasis);
+  --bs-alert-bg: var(--bs-midgray-bg-subtle);
+  --bs-alert-border-color: var(--bs-midgray-border-subtle);
+  --bs-alert-link-color: var(--bs-midgray-text-emphasis);
+}
+
 .alert-primary {
   --bs-alert-color: var(--bs-primary-text-emphasis);
   --bs-alert-bg: var(--bs-primary-bg-subtle);
@@ -5274,6 +5317,19 @@ textarea.form-control-lg {
   --bs-list-group-active-color: var(--bs-lightgray-bg-subtle);
   --bs-list-group-active-bg: var(--bs-lightgray-text-emphasis);
   --bs-list-group-active-border-color: var(--bs-lightgray-text-emphasis);
+}
+
+.list-group-item-midgray {
+  --bs-list-group-color: var(--bs-midgray-text-emphasis);
+  --bs-list-group-bg: var(--bs-midgray-bg-subtle);
+  --bs-list-group-border-color: var(--bs-midgray-border-subtle);
+  --bs-list-group-action-hover-color: var(--bs-emphasis-color);
+  --bs-list-group-action-hover-bg: var(--bs-midgray-border-subtle);
+  --bs-list-group-action-active-color: var(--bs-emphasis-color);
+  --bs-list-group-action-active-bg: var(--bs-midgray-border-subtle);
+  --bs-list-group-active-color: var(--bs-midgray-bg-subtle);
+  --bs-list-group-active-bg: var(--bs-midgray-text-emphasis);
+  --bs-list-group-active-border-color: var(--bs-midgray-text-emphasis);
 }
 
 .list-group-item-primary {
@@ -6868,6 +6924,11 @@ textarea.form-control-lg {
   background-color: RGBA(var(--bs-lightgray-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-midgray {
+  color: #000 !important;
+  background-color: RGBA(var(--bs-midgray-rgb), var(--bs-bg-opacity, 1)) !important;
+}
+
 .text-bg-primary {
   color: #fff !important;
   background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, 1)) !important;
@@ -6924,6 +6985,15 @@ textarea.form-control-lg {
 .link-lightgray:hover, .link-lightgray:focus {
   color: RGBA(245, 245, 245, var(--bs-link-opacity, 1)) !important;
   text-decoration-color: RGBA(245, 245, 245, var(--bs-link-underline-opacity, 1)) !important;
+}
+
+.link-midgray {
+  color: RGBA(var(--bs-midgray-rgb), var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(var(--bs-midgray-rgb), var(--bs-link-underline-opacity, 1)) !important;
+}
+.link-midgray:hover, .link-midgray:focus {
+  color: RGBA(161, 161, 161, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(161, 161, 161, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-primary {
@@ -7405,6 +7475,10 @@ textarea.form-control-lg {
   --bs-focus-ring-color: rgba(var(--bs-lightgray-rgb), var(--bs-focus-ring-opacity));
 }
 
+.focus-ring-midgray {
+  --bs-focus-ring-color: rgba(var(--bs-midgray-rgb), var(--bs-focus-ring-opacity));
+}
+
 .focus-ring-primary {
   --bs-focus-ring-color: rgba(var(--bs-primary-rgb), var(--bs-focus-ring-opacity));
 }
@@ -7565,6 +7639,11 @@ textarea.form-control-lg {
 .border-lightgray {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-lightgray-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-midgray {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-midgray-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-primary {
@@ -8528,6 +8607,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-lightgray-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-midgray {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-midgray-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-primary {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
@@ -8740,6 +8824,11 @@ textarea.form-control-lg {
   text-decoration-color: rgba(var(--bs-lightgray-rgb), var(--bs-link-underline-opacity)) !important;
 }
 
+.link-underline-midgray {
+  --bs-link-underline-opacity: 1;
+  text-decoration-color: rgba(var(--bs-midgray-rgb), var(--bs-link-underline-opacity)) !important;
+}
+
 .link-underline-primary {
   --bs-link-underline-opacity: 1;
   text-decoration-color: rgba(var(--bs-primary-rgb), var(--bs-link-underline-opacity)) !important;
@@ -8841,6 +8930,11 @@ textarea.form-control-lg {
 .bg-lightgray {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-lightgray-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-midgray {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-midgray-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-primary {
