--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12128,5 +12128,5 @@ textarea.form-control-lg {
   }
 }
 :root {
-  --bs-body-font-family: "Geologica", sans-serif;
+  --bs-body-font-family: "Helvetica Neue", sans-serif;
 }/*# sourceMappingURL=main.css.map */
