--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,5 +18,5 @@ $theme-colors: map-merge($main-colors, $theme-colors);
 @import url("https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap");
 
 :root {
-  --bs-body-font-family: "Geologica", sans-serif;
+  --bs-body-font-family: "Helvetica Neue", sans-serif;
 }
